# pdf-contract-analyzer

./: .env.example  .gitignore  ARCHITECTURE.md  DEPLOYMENT.md  LICENSE  PROJECT_STRUCTURE.md  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  api-test.http  docker-compose.yml  generate_sample_pdf.py  pyproject.toml  setup.sh  solution.md
backend/: .dockerignore  Dockerfile
backend/app/: config.py  database.py  main.py
backend/app/api/: __init__.py  contracts.py
backend/app/models/: __init__.py  contract.py
backend/app/schemas/: __init__.py  contract.py
backend/app/services/: __init__.py  nlp_service.py  pdf_service.py
backend/tests/: conftest.py  test_api.py  test_services.py
frontend/: .dockerignore  Dockerfile  README.md  index.html  nginx.conf  package-lock.json  package.json  vite.config.js
frontend/public/: index.html
frontend/src/: App.css  App.js  App.jsx  App.test.js
frontend/src/components/: Analytics.css  Analytics.js  Analytics.jsx  ContractList.css  ContractList.js  ContractList.jsx  FileUpload.css  FileUpload.js  FileUpload.jsx
frontend/src/services/: api.js
